--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,10 +1,44 @@
 .container {
-  width: 1440px;
+  width: 1024px;
   margin: 0 auto;
-  @media (min-width: 1440px) {
+  @media (min-width: 1024px) {
     font-size: 56px;
     line-height: 67px;
     border-right: 1px #c7cdd9 solid;
     border-left: 1px #c7cdd9 solid;
   }
+}
+
+.controls {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.block {
+  margin: 0;
+  padding: 0;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.btns {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.btn {
+  width: 50px;
+  aspect-ratio: 1;
+  border: 1px #42567a80 solid;
+  border-radius: 50%;
+  background: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
