--- a/src/components/title/styles.module.scss
+++ b/src/components/title/styles.module.scss
@@ -3,6 +3,7 @@
   font-size: 20px;
   line-height: 24px;
   color: #42567a;
+  margin: 0;
   @media (min-width: 1024px) {
     font-size: 56px;
     line-height: 67px;
