--- a/src/components/slider/styles.css
+++ b/src/components/slider/styles.css
@@ -1,3 +1,37 @@
+.swiperr {
+  position: relative;
+  overflow-x: visible;
+}
+.navigation {
+  width: 40px;
+  aspect-ratio: 1;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 15px 0px #3877ee1a;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: calc(100% / 2);
+  z-index: 30;
+}
+
+.prev {
+  left: -50px;
+}
+
+.next {
+  right: -50px;
+}
+
+.swiper-button-disabled {
+  display: none;
+}
+
 .swiper-custom-bullet {
   display: inline-block;
   height: 8px;
@@ -8,7 +42,7 @@
   margin-right: 4px;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1440px) {
   .swiper-custom-bullet {
     height: 16px;
     width: 16px;
