--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,12 +1,12 @@
 .container {
   width: 1440px;
   margin: 0 auto;
-  @media (min-width: 1024px) {
+  @media (min-width: 1440px) {
     font-size: 56px;
     line-height: 67px;
     border-right: 1px #c7cdd9 solid;
     border-left: 1px #c7cdd9 solid;
-    padding: 170px 40px 104px 80px;
+    padding: 170px 80px 104px;
   }
 }
 
