--- a/src/components/title/styles.module.scss
+++ b/src/components/title/styles.module.scss
@@ -4,6 +4,7 @@
   line-height: 24px;
   color: #42567a;
   margin: 0;
+  padding-bottom: 96px;
   @media (min-width: 1440px) {
     font-size: 56px;
     line-height: 67px;
