--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,12 +1,16 @@
-.container {
+.main {
   width: 1440px;
   margin: 0 auto;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100dvh + 1px);
   @media (min-width: 1440px) {
     font-size: 56px;
     line-height: 67px;
     border-right: 1px #c7cdd9 solid;
     border-left: 1px #c7cdd9 solid;
-    padding: 170px 80px 104px;
+    padding: 170px 160px 104px 80px;
   }
 }
 
@@ -14,6 +18,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin-top: 137px;
 }
 
 .block {
