--- a/src/components/slider/styles.css
+++ b/src/components/slider/styles.css
@@ -2,6 +2,7 @@
   position: relative;
   overflow-x: visible;
   margin-top: 56px;
+  z-index: 20;
 }
 .navigation {
   width: 40px;
@@ -79,4 +80,5 @@
   font-size: 20px;
   line-height: 30px;
   margin: 0;
+  color: #42567a;
 }
