added circles hover

--- a/src/components/circleAnimation/styles.module.scss
+++ b/src/components/circleAnimation/styles.module.scss
@@ -31,10 +31,27 @@
   line-height: 30px;
 }
 
+.circle_number {
+  opacity: 0;
+}
+
 .number__inactive {
   background: #42567a;
   width: 6px;
   height: 6px;
+  pointer-events: unset;
+}
+
+.number__inactive:hover {
+  width: 56px;
+  height: 56px;
+  color: #42567a;
+  background: none;
+  border: 1px #303e5880 solid;
+}
+
+.number__inactive:hover .circle_number {
+  opacity: 100;
 }
 
 .number__active {
@@ -42,4 +59,5 @@
   height: 56px;
   color: #42567a;
   border: 1px #303e5880 solid;
+  pointer-events: none;
 }
