--- a/src/components/circleAnimation/styles.module.scss
+++ b/src/components/circleAnimation/styles.module.scss
@@ -46,7 +46,7 @@
   width: 56px;
   height: 56px;
   color: #42567a;
-  background: none;
+  background: #ffffff;
   border: 1px #303e5880 solid;
 }
 
@@ -60,4 +60,5 @@
   color: #42567a;
   border: 1px #303e5880 solid;
   pointer-events: none;
+  background: #ffffff;
 }
