--- a/src/components/slider/styles.css
+++ b/src/components/slider/styles.css
@@ -1,25 +1,36 @@
 .slider {
   position: relative;
   overflow-x: visible;
-  margin-top: 56px;
+  margin-top: 20px;
   z-index: 20;
 }
+@media (min-width: 1440px) {
+  .slider {
+    margin-top: 56px;
+  }
+}
 .navigation {
-  width: 40px;
-  aspect-ratio: 1;
-  background-color: #ffffff;
-  box-shadow: 0px 0px 15px 0px #3877ee1a;
-  border-radius: 50%;
-  border: none;
-  cursor: pointer;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: calc(100% / 2);
-  z-index: 30;
+  display: none;
+}
+@media (min-width: 1440px) {
+  .navigation {
+    display: block;
+    width: 40px;
+    aspect-ratio: 1;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 15px 0px #3877ee1a;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: calc(100% / 2);
+    z-index: 30;
+  }
 }
 
 .prev {
@@ -32,6 +43,10 @@
 
 .swiper-button-disabled {
   display: none;
+}
+
+.swiper-slide-next {
+  opacity: 40%;
 }
 
 .swiper-custom-bullet {
@@ -61,24 +76,42 @@
   background-color: #0a0909;
 }
 .slide {
-  width: 320px;
+  width: 166px;
   display: flex;
   flex-direction: column;
   gap: 15px;
+}
+@media (min-width: 1440px) {
+  .slide {
+    width: 320px;
+  }
 }
 
 .slide__date {
   margin: 0;
   font-weight: 400;
-  font-size: 25px;
-  line-height: 30px;
+  font-size: 16px;
+  line-height: 19px;
   color: #3877ee;
+}
+
+@media (min-width: 1440px) {
+  .slide__date {
+    font-size: 25px;
+    line-height: 30px;
+  }
 }
 
 .slide__content {
   font-weight: 400;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 30px;
   margin: 0;
   color: #42567a;
+}
+
+@media (min-width: 1440px) {
+  .slide__content {
+    font-size: 20px;
+  }
 }
