--- a/src/components/title/styles.module.scss
+++ b/src/components/title/styles.module.scss
@@ -4,9 +4,11 @@
   line-height: 24px;
   color: #42567a;
   margin: 0;
-  padding-bottom: 96px;
   display: block;
+  padding-bottom: 56px;
+  width: 123px;
   @media (min-width: 1440px) {
+    padding-bottom: 96px;
     font-size: 56px;
     line-height: 67px;
     width: 353px;
