--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,12 +1,14 @@
 .main {
-  width: 1440px;
+  width: 100%;
   margin: 0 auto;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   min-height: calc(100dvh + 1px);
   position: relative;
+  padding: 60px 20px 14px 20px;
   @media (min-width: 1440px) {
+    width: 1440px;
     font-size: 56px;
     line-height: 67px;
     border-right: 1px #edf0f3 solid;
@@ -16,41 +18,75 @@
 }
 
 .main__x {
-  position: absolute;
+  display: none;
+  @media (min-width: 1440px) {
+    display: block;
+    position: absolute;
+    height: 1px;
+    width: 100%;
+    left: 0;
+    top: 480px;
+    background-color: #edf0f3;
+    z-index: -10;
+  }
+}
+
+.main__x_mobile {
   height: 1px;
   width: 100%;
-  left: 0;
-  top: 480px;
   background-color: #edf0f3;
-  z-index: -10;
+  margin-top: 57px;
+  @media (min-width: 1440px) {
+    display: none;
+  }
 }
 
 .main__y {
-  position: absolute;
-  width: 1px;
-  height: 100%;
-  left: calc(100% / 2);
-  top: 0;
-  background-color: #edf0f3;
-  z-index: -10;
+  display: none;
+  @media (min-width: 1440px) {
+    display: block;
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    left: calc(100% / 2);
+    top: 0;
+    background-color: #edf0f3;
+    z-index: -10;
+  }
 }
 
 .main__circle {
-  position: absolute;
-  top: 215px;
-  left: calc(100% / 2 - 268px);
-  width: 536px;
-  height: 536px;
-  border-radius: 50%;
-  border: 1px #edf0f3 solid;
-  z-index: -10;
+  display: none;
+  @media (min-width: 1440px) {
+    display: block;
+    position: absolute;
+    top: 215px;
+    left: calc(100% / 2 - 268px);
+    width: 536px;
+    height: 536px;
+    border-radius: 50%;
+    border: 1px #edf0f3 solid;
+    z-index: -10;
+  }
+}
+
+.swiper {
+  display: flex;
+  flex-direction: column-reverse;
+  @media (min-width: 1440px) {
+    flex-direction: column;
+  }
 }
 
 .controls {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin-top: 137px;
+  gap: 10px;
+  margin-top: 78px;
+  @media (min-width: 1440px) {
+    gap: 20px;
+    margin-top: 137px;
+  }
 }
 
 .block {
@@ -64,11 +100,14 @@
 .btns {
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 10px;
+  @media (min-width: 1440px) {
+    gap: 20px;
+  }
 }
 
 .btn {
-  width: 50px;
+  width: 25px;
   aspect-ratio: 1;
   border: 1px #42567a80 solid;
   border-radius: 50%;
@@ -79,4 +118,7 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  @media (min-width: 1440px) {
+    width: 50px;
+  }
 }
