--- a/src/components/period/styles.module.scss
+++ b/src/components/period/styles.module.scss
@@ -9,7 +9,9 @@
   justify-content: space-between;
   align-self: center;
   width: 273px;
+  padding-right: 20px;
   @media (min-width: 1440px) {
+    padding-right: 0px;
     width: 973px;
     font-size: 200px;
     line-height: 160px;
