navigation on mobile

--- a/src/components/slider/styles.css
+++ b/src/components/slider/styles.css
@@ -53,7 +53,20 @@
 .swiper-pagination-custom,
 .swiper-horizontal > .swiper-pagination-bullets,
 .swiper-pagination-bullets.swiper-pagination-horizontal {
-  top: 201px;
+  position: absolute;
+  bottom: -103px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+@media (min-width: 1440px) {
+  .swiper-pagination-fraction,
+  .swiper-pagination-custom,
+  .swiper-horizontal > .swiper-pagination-bullets,
+  .swiper-pagination-bullets.swiper-pagination-horizontal {
+    display: none;
+  }
 }
 
 .swiper-custom-bullet {
