--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -124,3 +124,12 @@
     width: 50px;
   }
 }
+
+.main__left {
+  position: absolute;
+  top: 177px;
+  left: -3px;
+  width: 5px;
+  height: 120px;
+  background: linear-gradient(180deg, #3877ee -5%, #ef5da8 85%);
+}
