added period names

--- a/src/components/circleAnimation/styles.module.scss
+++ b/src/components/circleAnimation/styles.module.scss
@@ -66,3 +66,10 @@
   pointer-events: none;
   background: #ffffff;
 }
+
+.name {
+  position: absolute;
+  right: 76px;
+  top: 52px;
+  margin: 0;
+}
