--- a/src/components/circleAnimation/styles.module.scss
+++ b/src/components/circleAnimation/styles.module.scss
@@ -67,6 +67,10 @@
 }
 
 .name {
+  color: #42567a;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 30px;
   position: absolute;
   left: 76px;
   margin: 0;
