--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -15,60 +15,73 @@
     border-left: 1px #edf0f3 solid;
     padding: 170px 160px 104px 80px;
   }
-}
 
-.main__x {
-  display: none;
-  @media (min-width: 1440px) {
-    display: block;
-    position: absolute;
-    height: 1px;
-    width: 100%;
-    left: 0;
-    top: 480px;
-    background-color: #edf0f3;
-    z-index: -10;
-  }
-}
-
-.main__x_mobile {
-  height: 1px;
-  width: 280px;
-  background-color: #edf0f3;
-  margin-top: 57px;
-  margin-right: 20px;
-  box-sizing: border-box;
-  @media (min-width: 1440px) {
+  &__circle {
     display: none;
+    @media (min-width: 1440px) {
+      display: block;
+      position: absolute;
+      top: 215px;
+      left: calc(100% / 2 - 268px);
+      width: 536px;
+      height: 536px;
+      border-radius: 50%;
+      border: 1px #edf0f3 solid;
+      z-index: -10;
+    }
   }
-}
 
-.main__y {
-  display: none;
-  @media (min-width: 1440px) {
-    display: block;
-    position: absolute;
-    width: 1px;
-    height: 100%;
-    left: calc(100% / 2);
-    top: 0;
-    background-color: #edf0f3;
-    z-index: -10;
+  &__x {
+    display: none;
+    @media (min-width: 1440px) {
+      display: block;
+      position: absolute;
+      height: 1px;
+      width: 100%;
+      left: 0;
+      top: 480px;
+      background-color: #edf0f3;
+      z-index: -10;
+    }
+
+    &_mobile {
+      height: 1px;
+      width: 280px;
+      background-color: #edf0f3;
+      margin-top: 57px;
+      margin-right: 20px;
+      box-sizing: border-box;
+      @media (min-width: 1440px) {
+        display: none;
+      }
+    }
   }
-}
 
-.main__circle {
-  display: none;
-  @media (min-width: 1440px) {
-    display: block;
-    position: absolute;
-    top: 215px;
-    left: calc(100% / 2 - 268px);
-    width: 536px;
-    height: 536px;
-    border-radius: 50%;
-    border: 1px #edf0f3 solid;
-    z-index: -10;
+  &__y {
+    display: none;
+    @media (min-width: 1440px) {
+      display: block;
+      position: absolute;
+      width: 1px;
+      height: 100%;
+      left: calc(100% / 2);
+      top: 0;
+      background-color: #edf0f3;
+      z-index: -10;
+    }
+  }
+
+  &__left {
+    display: none;
+    @media (min-width: 1440px) {
+      display: block;
+      position: absolute;
+      top: 177px;
+      left: -3px;
+      width: 5px;
+      height: 120px;
+      background: linear-gradient(180deg, #3877ee -5%, #ef5da8 85%);
+    }
   }
 }
 
@@ -89,14 +102,14 @@
     gap: 20px;
     margin-top: 137px;
   }
-}
 
-.block {
-  margin: 0;
-  padding: 0;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 18px;
+  &__period {
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+  }
 }
 
 .btns {
@@ -106,33 +119,21 @@
   @media (min-width: 1440px) {
     gap: 20px;
   }
-}
 
-.btn {
-  width: 25px;
-  aspect-ratio: 1;
-  border: 1px #42567a80 solid;
-  border-radius: 50%;
-  background: none;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  @media (min-width: 1440px) {
-    width: 50px;
-  }
-}
-
-.main__left {
-  position: absolute;
-  top: 177px;
-  left: -3px;
-  width: 5px;
-  height: 120px;
-  background: linear-gradient(180deg, #3877ee -5%, #ef5da8 85%);
-  @media (min-width: 1440px) {
-    display: none;
+  &__item {
+    width: 25px;
+    aspect-ratio: 1;
+    border: 1px #42567a80 solid;
+    border-radius: 50%;
+    background: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    @media (min-width: 1440px) {
+      width: 50px;
+    }
   }
 }
